# linprog-toolset

./: .gitignore  CMakeLists.txt  CNAME  README.md  index.html
src/: main.cpp
src/lpr_core/DEA/: dea_solver.hpp
src/lpr_core/adding_acts_cons/: adding_activities_and_constraints.hpp
src/lpr_core/branch_and_bound/: branch_and_bound.hpp
src/lpr_core/branch_and_bound_knapsack/: branch_and_bound_knapsack.hpp
src/lpr_core/cheapest_insertion/: cheapest_insertion_tsp.hpp
src/lpr_core/cutting_plane/: cutting_plane.hpp
src/lpr_core/descent_algorithm/: steepest_descent.hpp  symbolic_eval.hpp
src/lpr_core/dual_simplex/: dual_simplex.hpp
src/lpr_core/duality/: duality copy.hpp  duality.hpp
src/lpr_core/goal_simplex/penalties_simplex/: goal_penalties_simplex.hpp
src/lpr_core/goal_simplex/penaltiessimplex/: goal_penalties_simplex.hpp
src/lpr_core/goal_simplex/preemptive_simplex/: goal_preemptive_simplex.hpp
src/lpr_core/goal_simplex/preemptivesimplex/: goal_preemptive_simplex.hpp
src/lpr_core/goldenratio_search/: golden_section_search.hpp
src/lpr_core/graphical_solver/: graphical_solver.hpp
src/lpr_core/hungarian_algorithm/: hungarian_algorithm.hpp
src/lpr_core/machine_scheduling/: machine_scheduling_penalty.hpp  tardiness_scheduler.hpp
src/lpr_core/math_preliminaries/: math_preliminaries.hpp
src/lpr_core/neares_neighbour/: nearest_neighbour_tsp.hpp
src/lpr_core/nearest_neighbor/: nearest_neighbor_tsp.hpp
src/lpr_core/nearest_neighbour/: nearest_neighbour_tsp.hpp
src/lpr_core/sensitivity_analysis/: sensitivity_analysis copy.hpp  sensitivity_analysis.hpp
src/lpr_core/two_phase/: two_phase_simplex.hpp
src/lpr_core/two_phase_simplex/: two_phase_simplex.hpp
src/web/: index.html  web_bindings.hpp
src/web/ui/: adding_activities_and_constraints.js  branch_and_bound.js  cheapest_insertion_tsp.js  cutting_plane.js  dea.js  dual_simplex.js  duality.js  goal_penalties_simplex.js  goal_preemptive_simplex.js  goal_simplex.js  goldenratio_search.js  graphical_solver.js  hungarian_algorithm.js  knapsack.js  machine_scheduling.js  math_preliminaries.js  nearest_neighbor_tsp.js  sensitivity_analysis.js  simplex.js  steepest_descent.js  traveling_sales_person.js  two_phase_simplex.js
src/web/ui/python/steepest-descent/: descent_algorithm.py  index.html
src/web/wasm/: linprog-toolset.js  linprog-toolset.wasm
tools/: build-emcc.bat
